Added new options to control info gathering. Added hostname to gathered info.

--- a/templates/datastores_info.yml.j2
+++ b/templates/datastores_info.yml.j2
@@ -5,6 +5,7 @@
 
 {% for d in r.datastores  %}
 - name: {{ d.name | to_json }}
+  hostname: "{{ vmware_provisioner_hostname }}"
   datacenter: {{ datacenter }}
   cluster: {{ cluster }}
   total: {{ d.total | to_json }}
