--- a/templates/clusters_info.yml.j2
+++ b/templates/clusters_info.yml.j2
@@ -1,6 +1,7 @@
 {% set ns = namespace(found=false) %}
 
 {% for r in vmware_provisioner_clusters_result.results %}
+{% set hostname_dict = {"hostname": vmware_provisioner_hostname} %}
 {% set datacenter_dict = {"datacenter": r.vmware_provisioner_datacenter.name} %}
 {% for c in r.json.value %}
 {% if vmware_provisioner_host_config_info_result is defined %}
@@ -10,9 +11,16 @@
                              c.name)
                 | list
                 | first).hosts %}
-- {{ c | combine(datacenter_dict) | combine({"hosts": hosts}) | to_json }}
+- {{ c
+     | combine(hostname_dict)
+     | combine(datacenter_dict)
+     | combine({"hosts": hosts}) 
+     | to_json }}
 {% else %}
-- {{ c | combine(datacenter_dict) | to_json }}
+- {{ c
+     | combine(hostname_dict)
+     | combine(datacenter_dict)
+     | to_json }}
 {% endif %}
 {% set ns.found = true %}
 {% endfor %}
